--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
    <link rel="icon" type="image/png" href="images/favicon.png">
    <!--favicon-img-->
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 
 </head>
-<body>
+
 <!-- partial:index.partial.html -->
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Swift</title>
-	<link rel="stylesheet" type="text/css" href="1.page.css">
-</head>
+
+
+
 <body>
+
+	<div class="logo">
+		<img  src="images/willy wonka logo.png" alt="logo">
+	</div>
+
 	<div id="main">
 	  <div id="butEN">
 	    <a href="EN.html" id="p">English</a>
 	  </div>
 	  <div id="butFA">
-	     <a href="FA.html" id="a" >فارسی</a>
+	     <a href="FA.html" id="a" >فارسی  </a>
       </div>
 	</div>
-</body>
-</html>
+
+
 <!-- partial -->
   
 </body>
