--- a/FA.html
+++ b/FA.html
@@ -38,9 +38,7 @@
         <!--Main-Section-->
         <!--Navigator-fullscreen-->
         <div id="navigation-content">
-            <div class="logo">
-                <img  src="images/willy wonka logo.png" alt="logo">
-            </div>
+            
             <div class="navigation-close">
                 <span class="close-first"></span>
                 <span class="close-second"></span>
@@ -152,7 +150,7 @@
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpg" alt="Your Image">
+                <img src="https://cdn.discordapp.com/avatars/497342665067724811/42a1b4b95e28c843ae727836fe458f73.png?size=1024" alt="Your Image">
             </div>
             </div>
     
@@ -335,7 +333,7 @@
                     </div>
                 </div>
                 </div>
-           تجربه <div class="portfolio-header"> <span class="color"> من </span> 
+            <div class="portfolio-header">تجربه <span class="color"> من </span> 
             <span class ="header-caption"> بعضی از کارهای <span class="color"> من</span></span></div>
              <div id="portfolio-content">
                  <div class="portfolio portfolio-first">
