--- a/EN.html
+++ b/EN.html
@@ -148,7 +148,7 @@
             </div>
             <!--about picture-->
             <div class="about-img">
-                <img src="images/about.jpg" alt="Your Image">
+                <img src="https://cdn.discordapp.com/avatars/497342665067724811/42a1b4b95e28c843ae727836fe458f73.png?size=1024" alt="Your Image">
             </div>
             </div>
     
