--- a/FA.html
+++ b/FA.html
@@ -133,7 +133,7 @@
             <div id="about-content">
                 <div class="about-header">
                     درباره <span class="color">من</span>
-                    <span class ="header-caption">بشناس <span class="color"> مرا.</span></span>
+                    <span class ="header-caption"> <span class="color"> مرا.</span>بشناس</span>
                 </div>
                 <div class="about-main">
             <div class="about-first-paragraph-wow">
@@ -353,7 +353,7 @@
                     </div>
                     <div class="portfolio-text">
                         <h2>طراحی  سایت</h2>
-                        <p>من دارای ۲ سال تجربه ساخت سایت میباششم و تا به حال چند پروژه رو با موفقیت به پایان رساندم</p>
+                        <p>من دارای ۲ سال تجربه ساخت سایت میباشم و تا به حال چند پروژه رو با موفقیت به پایان رساندم</p>
                         
                     </div>
                 </div>
