--- a/FA.html
+++ b/FA.html
@@ -78,8 +78,8 @@
                 <div class="header-content-box">
                 <div class="firstline"><span class="color">Mr </span>Swift</div>
                 <div class="secondline">
-                من یک
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ "طراح وب هستم", "توسعه دهنده ربات هستم", " گرافیست هستم." ]'></span>
+                
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ "طراح وب ", "توسعه دهنده ربات ", " گرافیست ." ]'></span>
             <span class="slash">|</span>
         </div>
                     <div class="contact">
