--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Bot Developer , Web Designer , Graphist /n  ساخت بات  , طراحی سایت , طراحی لوگو و موشن گرافیک" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
+    <meta name="description" content="Bot Developer , Web Designer , Graphist   ساخت بات  , طراحی سایت , طراحی لوگو و موشن گرافیک" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="Mr Swift" />
     <title>Mr Swift</title>
@@ -20,22 +20,23 @@
 
 
 <body>
+	
 
 	<div class="logo">
-		<img  src="images/willy wonka logo.png" alt="logo">
+		<img  src="images/mr swift logo.png" alt="logo">
 	</div>
 
-	<div id="main">
-	  <div id="butEN">
+	<div class="main">
+	  <div>
 	    <a href="EN.html" id="p">English</a>
-	  </div>
-	  <div id="butFA">
-	     <a href="FA.html" id="a" >فارسی  </a>
-      </div>
 	</div>
-
+	<div>
+	     <a href="FA.html" id="a" >فـارسـی  </a>
+	</div>
+		
+		</div>
 
 <!-- partial -->
-  
+
 </body>
 </html>
