--- a/FA.html
+++ b/FA.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Bot Developer , Web Designer , Graphist /n  ساخت بات  , طراحی سایت , طراحی لوگو و موشن گرافیک" />
+    <meta name="description" content="Bot Developer , Web Designer , Graphist   ساخت بات  , طراحی سایت , طراحی لوگو و موشن گرافیک" />
 	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
 	<meta name="author" content="Mr Swift" />
     <title>Mr Swift</title>
@@ -65,7 +65,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img href="#HOME" src="images/willy wonka logo.png" alt="logo">
+            <img href="#HOME" src="imagesmr swift logo.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
