--- a/EN.html
+++ b/EN.html
@@ -64,7 +64,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img href="#HOME" src="images/mr swift logo.png" alt="logo">
+            <img href="#HOME" src="./images/mr swift logo.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
@@ -140,6 +140,7 @@
             </div>
             </div>
             <!--about content-->
+            
             <div id="about-content">
                 <div class="about-header">
                     About <span class="color">Me</span>
