--- a/FA.html
+++ b/FA.html
@@ -65,7 +65,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img href="#HOME" src="imagesmr swift logo.png" alt="logo">
+            <img href="#HOME" src="./images/mr swift logo.png" alt="logo">
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
