--- a/EN.html
+++ b/EN.html
@@ -13,7 +13,6 @@
    <!--favicon-img-->
    <!--main css file should not be removed -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/style1.css">
     <!--main css file-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <script type="text/JavaScript" language="javascript">
@@ -101,7 +100,7 @@
             <!--header image-->
             <div class="header-image">
             <img src="images/man.jpg" alt="logo">
-            
+        </div>
             <!--header image end-->
         </div>
            <!--Header End-->
