--- a/EN.html
+++ b/EN.html
@@ -63,7 +63,7 @@
           <!--Home Page-->
         <!--Menubar-->
         <div id="navigation-bar">
-            <img href="#HOME" src="./images/mr swift logo.png" alt="logo">
+            <img  src="./images/mr swift logo.png" alt="logo"> 
             <div class="menubar">
                 <span class="first-span"></span>
                 <span class="second-span"></span>
