--- a/FA.html
+++ b/FA.html
@@ -87,7 +87,7 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                <div class="firstline"><span class="color">Mr </span>Swift</div>
+               <a href="https://jobinja.ir/user/FK-7536417/download"></a> <div class="firstline"><span class="color">Mr </span>Swift</div>
                 <div class="secondline">
                 
             <span class="txt-rotate color" data-period="1200"data-rotate='[ "طراح وب ", "توسعه دهنده ربات ", " گرافیست ." ]'></span>
