--- a/index.html
+++ b/index.html
@@ -25,18 +25,26 @@
 	<div class="logo">
 		<img  src="images/mr swift logo.png" alt="logo">
 	</div>
-
+	
+	
 	<div class="main">
+		<div>
+			<a href="https://jobinja.ir/user/FK-7536417/download" id="c">Resume</a>
+		</div>
 	  <div>
 	    <a href="EN.html" id="p">English</a>
 	</div>
 	<div>
 	     <a href="FA.html" id="a" >فـارسـی  </a>
 	</div>
+	<div>
+		<a href="https://jobinja.ir/user/FK-7536417/download" id="b" >رزومــه   </a>
+   </div>
 		
 		</div>
 
 <!-- partial -->
+
 
 </body>
 </html>
