--- a/EN.html
+++ b/EN.html
@@ -35,7 +35,23 @@
     <!--mouse  follower-->
     <!--loader-->
         <div id="loader">
-            <span class="color">Mr</span>Swift 
+            <div class="loading"> 
+                <span><span><span><span><span><span><span><span><span><span><span><span><span><span><span><span></span></span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+                </span>
+            </div>
         </div>
     <!--loader-end-->
     <!--link-screen-->
