add backgrond music

--- a/EN.html
+++ b/EN.html
@@ -28,8 +28,12 @@
         </script>
 </head>
 <body>
+    <audio autoplay  loop="10">
+        <source src="music/back music.mp3" type="audio/mpeg">
+        </audio>
     <!--contains all the div-->
     <div id="all">
+        
     <!--mouse  follower-->
         <div class="cursor"></div>
     <!--mouse  follower-->
