--- a/FA.html
+++ b/FA.html
@@ -30,6 +30,9 @@
         </script>
 </head>
 <body>
+    <audio autoplay  loop="10">
+        <source src="music/back music.mp3" type="audio/mpeg">
+        </audio>
     <!--contains all the div-->
     <div id="all">
     <!--mouse  follower-->
