--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 	
 	<div class="main">
 		<div>
-			<a href="https://jobinja.ir/user/FK-7536417/download" id="c">Resume</a>
+		<!---	<a href="https://jobinja.ir/user/FK-7536417/download" id="c">Resume</a> --->
 		</div>
 	  <div>
 	    <a href="EN.html" id="p">English</a>
 	</div>
 	<div>
-	     <a href="FA.html" id="a" >فـارسـی  </a>
+	     <a href="FA.html" id="a" >فــارســـی  </a>
 	</div>
 	<div>
-		<a href="https://jobinja.ir/user/FK-7536417/download" id="b" >رزومــه   </a>
+		<!--- <a href="https://jobinja.ir/user/FK-7536417/download" id="b" >رزومـــه   </a> --->
    </div>
 		
 		</div>
